--- a/talon-integration-api/src/main/resources/application.properties
+++ b/talon-integration-api/src/main/resources/application.properties
@@ -1,20 +1,5 @@
-# Spring Boot Application Properties
-
-spring.datasource.url=jdbc:h2:mem:talondb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-
-# OpenAPI/Swagger
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
-# Security: API Key Header
-api.security.header=Authorization
-api.security.prefix=ApiKey-v1 
-
-# Server port
 server.port=8080
+
+# Talon.One API configuration
+talon.api.base-url=https://yourbaseurl.talon.one
+talon.api.key=ApiKey-v1 YOUR_API_KEY
