--- a/talon-integration-api/src/main/resources/application.yml
+++ b/talon-integration-api/src/main/resources/application.yml
@@ -1,6 +1,27 @@
 server:
   port: 8080
 
-talon:
-  api-key: "YOUR_TALON_ONE_API_KEY"
-  base-url: "https://yourbaseurl.talon.one"
+spring:
+  datasource:
+    url: jdbc:h2:mem:talon;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: ""
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    operationsSorter: method
